...

    var id: String

    @Property(title: "Name")
    var name: String

    @Property(title: "Balance")
    var balance: IntentCurrencyAmount?

    @Property(title: "Off-Budget")
    var offBudget: Bool

    @Property(title: "Closed")
    var closed: Bool

    var displayRepresentation: DisplayRepresentation {
        DisplayRepresentation(
            title: "\(name)",
            subtitle: offBudget ? "Off-budget" : "On-budget"
...
